// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<IssueIcon
  type="BUG"
/>
`;

exports[`should render correctly 2`] = `
<IssueIcon
  className="my-class"
  type="SECURITY_HOTSPOT"
/>
`;

exports[`should render correctly 3`] = `
<IssueIcon
  type="CODE_SMELL"
/>
`;

exports[`should render correctly 4`] = `
<IssueIcon
  type="VULNERABILITY"
/>
`;
